...
    let collectionView: UICollectionView = {
        let layout = UICollectionViewFlowLayout()
        layout.minimumInteritemSpacing = 0
        layout.minimumLineSpacing = 0
        layout.sectionInset = UIEdgeInsets.init(top: 20, left: 0, bottom: 0, right: 0)
        let collectionView = UICollectionView(frame: CGRect.zero, collectionViewLayout: layout)
        collectionView.accessibilityIdentifier = "crystal collection view"
        return collectionView
    }()
    
    var diffCalculator: SingleSectionCollectionViewDiffCalculator<CrystalCellViewModel>?
    let crystalStore: CrystalStore
    
...
        segmentedControl.segmentWidthStyle = .fixed
        segmentedControl.selectionIndicatorHeight = 3
        segmentedControl.segmentEdgeInset = UIEdgeInsets.zero
        segmentedControl.selectionIndicatorColor = UIColor.stoneLightOrange
        segmentedControl.selectedSegmentIndex = 0
        segmentedControl.tintColor = UIColor.gray
        segmentedControl.accessibilityIdentifier = "search segmented control"
        segmentedControl.subviews.enumerated().forEach({ (index: Int, element: UIView) in
            element.accessibilityIdentifier = "search segmented control subview \(index)"
        })
        return segmentedControl
    }()
    
...
    }()
    
    let vibesView: VibesView
    
    let searchBar: UISearchBar = {
        let searchBar = UISearchBar()
        searchBar.accessibilityIdentifier = "crystal search bar"
        UITextField.appearance(whenContainedInInstancesOf: [UISearchBar.self]).defaultTextAttributes = convertToNSAttributedStringKeyDictionary([
            NSAttributedString.Key.foregroundColor.rawValue: UIColor.stoneLightBlue,
            NSAttributedString.Key.font.rawValue: UIFont(name: "Brown-Light", size: 16) ?? UIFont.systemFont(ofSize: 16),
        ])
        let clear = UIImage.from(color: UIColor.clear)
//        searchBar.setSearchFieldBackgroundImage(clear, for: .normal)
...
